# opentypes

./: Explanation.txt  opentypes.cabal
src/: Main.hs
src/OpenTypes/: Finalization.hs  Interface.hs  WrapConstructors.hs
src/OpenTypes/Test/: BadModule.hs  Fragment1.hs  Fragment2.hs  OpenInterface.hs  TwoParam.hs
